--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,9 @@
 konform = "0.11.1"
 kotlin = "2.2.20"
 kotlin-logging = "7.0.13"
+kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.9.0"
+ktor = "3.3.0"
 logback = "1.5.18"
 maven-publish = "0.34.0"
 urlencoder = "1.6.0"
@@ -15,6 +17,10 @@ maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "maven-publ
 [libraries]
 konform = { group = "io.konform", name = "konform", version.ref = "konform" }
 kotlin-logging = { group = "io.github.oshai", name = "kotlin-logging", version.ref = "kotlin-logging" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+ktor-client-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
+ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
+ktor-client-js = { group = "io.ktor", name = "ktor-client-js", version.ref = "ktor" }
 logback-classic = { group = "ch.qos.logback", name = "logback-classic", version.ref = "logback" }
 urlencoder = { group = "net.thauvin.erik.urlencoder", name = "urlencoder-lib", version.ref = "urlencoder" }
